# harness-radar

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: harness-mode.json  settings.json
.claude/agents/: architect.md  devops.md  implementer.md  product-manager.md  reviewer.md  tester.md
.claude/commands/: init-mode.md  kickoff.md  next.md  parallel.md  retro.md  ship.md  start.md  status.md  verify.md
.claude/hooks/: session-start.sh  stop.sh
.claude/skills/file-bug/: SKILL.md
.claude/skills/label-discipline/: SKILL.md
.claude/skills/skill-maintenance/: SKILL.md
.claude/skills/system-role-boundaries/: SKILL.md
.claude/skills/worktree-management/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.json  project-config.json
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  spike.yml  story.yml
.github/workflows/: ci.yml
docs/: architecture.md  runbook.md  spec.md
harness/: backlog.md  init.sh  progress.md  verify.sh
harness/decisions/: 0001-stack.md  0002-issue-10-interpretation.md  README.md
scripts/: gh-bootstrap.sh  gh-next-issue.sh  gh-project.sh  gh-sub-issue.sh  merge-worktree.sh  new-worktree.sh
src/harness_radar/: cli.py
src/harness_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/harness_radar/collector/: __init__.py  gh.py
tests/: test_cli.py  test_collector.py  test_smoke.py  test_validate.py
